--- a/app/src/main/res/layout/content_timeline.xml
+++ b/app/src/main/res/layout/content_timeline.xml
@@ -21,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:divider="#e1e8ed"
+        android:divider="@color/colorLightGrey"
+        android:clickable="false"
         android:dividerHeight="1dp"
         android:drawSelectorOnTop="false" />
 </LinearLayout>
