--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_report"
+        android:id="@+id/menu_action_report"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/menu_report"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_logout"
+        android:id="@+id/menu_action_logout"
         android:orderInCategory="101"
-        android:title="@string/action_logout"
+        android:title="@string/menu_logout"
         app:showAsAction="never" />
 </menu>
